--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 
     <servlet>
         <servlet-name>addToBucket</servlet-name>
-        <servlet-class>mate.academy.internetshop.controller.AddingBucketController</servlet-class>
+        <servlet-class>mate.academy.internetshop.controller.AddItemToBucketController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>addToBucket</servlet-name>
@@ -78,7 +78,7 @@
 
     <servlet>
         <servlet-name>addOrder</servlet-name>
-        <servlet-class>mate.academy.internetshop.controller.CreateOrderController</servlet-class>
+        <servlet-class>mate.academy.internetshop.controller.CompleteOrderController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>addOrder</servlet-name>
